Labelling with (x,y) coordinates

--- a/Speed_Estimation_and_Vehicle_tracking.ipynb
+++ b/Speed_Estimation_and_Vehicle_tracking.ipynb
@@ -6,7 +6,7 @@
       "private_outputs": true,
       "provenance": [],
       "gpuType": "T4",
-      "authorship_tag": "ABX9TyMSEYXngRFN2DhykI7VQemJ",
+      "authorship_tag": "ABX9TyON93sGkvjR8RLEmthR8iWt",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -97,7 +97,15 @@
         "# Declaring variables\n",
         "SOURCE_VIDEO = \"vehicles.mp4\"\n",
         "TARGET_VIDEO = \"vehicles-result.mp4\"\n",
-        "SOURCE = np.array([[1252, 787], [2298, 803], [5039, 2159], [-550, 2159]])"
+        "SOURCE = np.array([[1252, 787], [2298, 803], [5039, 2159], [-550, 2159]])\n",
+        "TARGET_WIDTH = 25\n",
+        "TARGET_HEIGHT = 250\n",
+        "TARGET = np.array([\n",
+        "    [0, 0],\n",
+        "    [TARGET_WIDTH-1, 0],\n",
+        "    [TARGET_WIDTH-1, TARGET_HEIGHT-1],\n",
+        "    [0, TARGET_HEIGHT-1]\n",
+        "])"
       ],
       "metadata": {
         "id": "0wtK-XUuGR_8"
@@ -120,6 +128,29 @@
     {
       "cell_type": "code",
       "source": [
+        "# For resolving perspective distortion and get the coordinates for objects as per their position in the frame\n",
+        "class ViewTransformer:\n",
+        "  def __init__(self, source, target):\n",
+        "    source = source.astype(np.float32)\n",
+        "    target = target.astype(np.float32)\n",
+        "    self.matrix = cv2.getPerspectiveTransform(source, target)\n",
+        "\n",
+        "  def transformed_points(self, points):\n",
+        "    reshaped_points = points.reshape(-1, 1, 2).astype(np.float32)\n",
+        "    transformed_points = cv2.perspectiveTransform(reshaped_points, self.matrix)\n",
+        "    return transformed_points.reshape(-1, 2)"
+      ],
+      "metadata": {
+        "id": "3We5d2S6obDe"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from collections import deque\n",
+        "from typing import DefaultDict\n",
         "# Getting information about the video\n",
         "video_info = sv.VideoInfo.from_video_path(SOURCE_VIDEO)\n",
         "\n",
@@ -143,8 +174,11 @@
         "# Plotting the polygon box to limit the detection boundary, and calculating speed\n",
         "polygon_zone = sv.PolygonZone(SOURCE, frame_resolution_wh=video_info.resolution_wh)\n",
         "\n",
+        "# Calling the ViewTransformer\n",
+        "view_transformer = ViewTransformer(source=SOURCE, target=TARGET)\n",
+        "\n",
         "# Getting video frames\n",
-        "frame_generator = sv.get_video_frames_generator(SOURCE_VIDEO)"
+        "frame_generator = sv.get_video_frames_generator(SOURCE_VIDEO)\n"
       ],
       "metadata": {
         "id": "o7qvrHGaE5KV"
@@ -162,14 +196,21 @@
         "result = model.infer(frame)[0]\n",
         "detections = sv.Detections.from_inference(result)\n",
         "\n",
+        "# Detecting only inside polygon zone\n",
+        "detections = detections[polygon_zone.trigger(detections)]\n",
+        "\n",
         "# Labelling objects with id's\n",
         "detections = byte_track.update_with_detections(detections=detections)\n",
         "\n",
+        "#\n",
+        "points = detections.get_anchors_coordinates(anchor=sv.Position.BOTTOM_CENTER)\n",
+        "points = view_transformer.transformed_points(points).astype(int)\n",
+        "\n",
         "# Labels list\n",
         "labels = [\n",
-        "    f\"#{tracker_id}\"\n",
-        "    for tracker_id\n",
-        "    in detections.tracker_id\n",
+        "    f\"#x:{x}, y:{y}\"\n",
+        "    for [x, y]\n",
+        "    in points\n",
         "]\n",
         "\n",
         "# Annotating the frame\n",
