Speed detection and trace route.

--- a/Speed_Estimation_and_Vehicle_tracking.ipynb
+++ b/Speed_Estimation_and_Vehicle_tracking.ipynb
@@ -6,7 +6,7 @@
       "private_outputs": true,
       "provenance": [],
       "gpuType": "T4",
-      "authorship_tag": "ABX9TyON93sGkvjR8RLEmthR8iWt",
+      "authorship_tag": "ABX9TyMkQoBIwWeNoDBidj2wzq5/",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -43,7 +43,7 @@
     {
       "cell_type": "code",
       "source": [
-        "!pip install -q supervision inference ultralytics"
+        "!pip install -q supervision inference tqdm opencv-python numpy collection typing ultralytics"
       ],
       "metadata": {
         "collapsed": true,
@@ -71,10 +71,32 @@
         "from IPython.display import Video\n",
         "\n",
         "# For getting the model for detection\n",
-        "from inference.models.utils import get_roboflow_model"
+        "from inference.models.utils import get_roboflow_model\n",
+        "\n",
+        "from tqdm import tqdm\n",
+        "\n",
+        "# For gpu acceleration\n",
+        "import torch\n",
+        "\n",
+        "from ultralytics import YOLO"
       ],
       "metadata": {
         "id": "682GXcvI246P"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "\n",
+        "# Check if cuda is available\n",
+        "torch.cuda.is_available()\n",
+        "# Select cuda as device\n",
+        "device = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")"
+      ],
+      "metadata": {
+        "id": "sVQQIy0_nRW1"
       },
       "execution_count": null,
       "outputs": []
@@ -154,9 +176,8 @@
         "# Getting information about the video\n",
         "video_info = sv.VideoInfo.from_video_path(SOURCE_VIDEO)\n",
         "\n",
-        "\n",
-        "# Get the model\n",
-        "model = get_roboflow_model(\"yolov8x-640\")\n",
+        "# Get the model from roboflow\n",
+        "model = get_roboflow_model(\"yolov11x-seg-640\")\n",
         "\n",
         "# Using byte track to track individual object to get its id using video frames\n",
         "byte_track = sv.ByteTrack(frame_rate=video_info.fps)\n",
@@ -166,19 +187,27 @@
         "text_scale = sv.calculate_optimal_text_scale(resolution_wh=video_info.resolution_wh)\n",
         "\n",
         "# Bounding boxes\n",
-        "bounding_box_annotator = sv.BoundingBoxAnnotator(thickness=thickness)\n",
+        "bounding_box_annotator = sv.BoundingBoxAnnotator(thickness=thickness, color_lookup=sv.ColorLookup.TRACK)\n",
         "\n",
         "# Labelling the bounding box\n",
-        "label_annotator = sv.LabelAnnotator(text_scale=text_scale, text_thickness=thickness)\n",
+        "label_annotator = sv.LabelAnnotator(text_scale=text_scale, text_thickness=thickness, text_position=sv.Position.BOTTOM_CENTER, color_lookup=sv.ColorLookup.TRACK)\n",
+        "\n",
+        "# For tracing moving vehicle's track\n",
+        "trace_annotator = sv.TraceAnnotator(thickness=thickness, trace_length=video_info.fps*2, position=sv.Position.BOTTOM_CENTER, color_lookup=sv.ColorLookup.TRACK)\n",
         "\n",
         "# Plotting the polygon box to limit the detection boundary, and calculating speed\n",
         "polygon_zone = sv.PolygonZone(SOURCE, frame_resolution_wh=video_info.resolution_wh)\n",
+        "\n",
+        "\n",
         "\n",
         "# Calling the ViewTransformer\n",
         "view_transformer = ViewTransformer(source=SOURCE, target=TARGET)\n",
         "\n",
         "# Getting video frames\n",
-        "frame_generator = sv.get_video_frames_generator(SOURCE_VIDEO)\n"
+        "frame_generator = sv.get_video_frames_generator(SOURCE_VIDEO)\n",
+        "\n",
+        "# Getting the coordinate history\n",
+        "coordinates = DefaultDict(lambda: deque(maxlen=video_info.fps))"
       ],
       "metadata": {
         "id": "o7qvrHGaE5KV"
@@ -189,57 +218,113 @@
     {
       "cell_type": "code",
       "source": [
-        "# Annotating a single frame\n",
-        "frame = iter(frame_generator)\n",
-        "frame = next(frame)\n",
         "\n",
-        "result = model.infer(frame)[0]\n",
-        "detections = sv.Detections.from_inference(result)\n",
+        "# # ----------------------------------------------------------------------------------------------------------------------\n",
+        "# # Annotating a single frame\n",
+        "# frame = iter(frame_generator)\n",
+        "# frame = next(frame)\n",
         "\n",
-        "# Detecting only inside polygon zone\n",
-        "detections = detections[polygon_zone.trigger(detections)]\n",
+        "# result = model.infer(frame)[0]\n",
+        "# detections = sv.Detections.from_inference(result)\n",
         "\n",
-        "# Labelling objects with id's\n",
-        "detections = byte_track.update_with_detections(detections=detections)\n",
+        "# # Detecting only inside polygon zone\n",
+        "# detections = detections[polygon_zone.trigger(detections)]\n",
         "\n",
-        "#\n",
-        "points = detections.get_anchors_coordinates(anchor=sv.Position.BOTTOM_CENTER)\n",
-        "points = view_transformer.transformed_points(points).astype(int)\n",
+        "# # Labelling objects with id's\n",
+        "# detections = byte_track.update_with_detections(detections=detections)\n",
         "\n",
-        "# Labels list\n",
-        "labels = [\n",
-        "    f\"#x:{x}, y:{y}\"\n",
-        "    for [x, y]\n",
-        "    in points\n",
-        "]\n",
+        "# #\n",
+        "# points = detections.get_anchors_coordinates(anchor=sv.Position.BOTTOM_CENTER)\n",
+        "# points = view_transformer.transformed_points(points).astype(int)\n",
         "\n",
-        "# Annotating the frame\n",
+        "# # Labels list\n",
+        "# labels = []\n",
         "\n",
-        "annotated_frame = frame.copy()\n",
+        "# for tracker_id, [_, y] in zip(detections.tracker_id, points):\n",
+        "#   coordinates[tracker_id].append(y)\n",
+        "#   if len(coordinates[tracker_id]) < video_info.fps/2:\n",
+        "#     labels.append(f\"#{tracker_id}\")\n",
+        "#   else:\n",
+        "#     coordinate_start = coordinates[tracker_id][-1]\n",
+        "#     coordinate_end = coordinates[tracker_id][0]\n",
+        "#     distance = abs(coordinate_start - coordinate_end)\n",
+        "#     time = len(coordinates[tracker_id]) / video_info.fps\n",
+        "#     speed = distance / time * 3.6\n",
+        "#     labels.append(f\"#{tracker_id} {int(speed)}km/h\")\n",
         "\n",
-        "# Drawing the polygon onto the frame\n",
-        "annotated_frame = sv.draw_polygon(scene=annotated_frame, polygon=SOURCE, color=sv.Color.RED)\n",
+        "# # Annotating the frame\n",
         "\n",
-        "annotated_frame = bounding_box_annotator.annotate(scene=annotated_frame, detections=detections)\n",
-        "annotated_frame = label_annotator.annotate(scene=annotated_frame, detections=detections, labels=labels)\n",
+        "# annotated_frame = frame.copy()\n",
         "\n",
-        "sv.plot_image(annotated_frame)\n",
+        "# # Drawing the polygon onto the frame\n",
+        "# annotated_frame = sv.draw_polygon(scene=annotated_frame, polygon=SOURCE, color=sv.Color.RED)\n",
         "\n",
-        "## Looping over frames to annotate vehicles frame by frame\n",
-        "# for frame in frame_generator:\n",
-        "#   result = model.infer(frame)[0]\n",
-        "#   detections = sv.Detections.from_inference(result)\n",
+        "# annotated_frame = bounding_box_annotator.annotate(scene=annotated_frame, detections=detections)\n",
+        "# annotated_frame = label_annotator.annotate(scene=annotated_frame, detections=detections, labels=labels)\n",
         "\n",
-        "#   annotated_frame = frame.copy()\n",
-        "#   annotated_frame = bounding_box_annotator.annotate(scene=annotated_frame, detections=detections)\n",
-        "#   annotated_frame = label_annotator.annotate(scene=annotated_frame, detections=detections)\n",
+        "# sv.plot_image(annotated_frame)\n",
+        "# # ---------------------------------------------------------------------------------------------------------------------"
+      ],
+      "metadata": {
+        "id": "xRKQRYUAGXRe"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "\n",
-        "#   # cv2_imshow(annotated_frame)\n",
-        "#   if cv2.waitKey(1) & 0xFF == ord(\"q\"):\n",
-        "#     break\n",
+        "# open target video\n",
+        "with sv.VideoSink(TARGET_VIDEO, video_info) as sink:\n",
+        "    # Looping over frames to annotate vehicles frame by frame\n",
+        "    # loop over source video frame\n",
+        "    for frame in tqdm(frame_generator, total=video_info.total_frames):\n",
         "\n",
-        "# # Closing the window\n",
-        "# cv2.destroyAllWindows()"
+        "\n",
+        "      result = model.infer(frame)[0]\n",
+        "\n",
+        "      detections = sv.Detections.from_inference(result)\n",
+        "\n",
+        "      # Detecting only inside polygon zone\n",
+        "      detections = detections[polygon_zone.trigger(detections)]\n",
+        "\n",
+        "      # Labelling objects with id's\n",
+        "      detections = byte_track.update_with_detections(detections=detections)\n",
+        "\n",
+        "      #\n",
+        "      points = detections.get_anchors_coordinates(anchor=sv.Position.BOTTOM_CENTER)\n",
+        "      points = view_transformer.transformed_points(points).astype(int)\n",
+        "\n",
+        "      # Labels list\n",
+        "      labels = []\n",
+        "\n",
+        "      for tracker_id, [_, y] in zip(detections.tracker_id, points):\n",
+        "        coordinates[tracker_id].append(y)\n",
+        "        if len(coordinates[tracker_id]) < video_info.fps/2:\n",
+        "          labels.append(f\"#{tracker_id}\")\n",
+        "        else:\n",
+        "          coordinate_start = coordinates[tracker_id][-1]\n",
+        "          coordinate_end = coordinates[tracker_id][0]\n",
+        "          distance = abs(coordinate_start - coordinate_end)\n",
+        "          time = len(coordinates[tracker_id]) / video_info.fps\n",
+        "          speed = distance / time * 3.6\n",
+        "          labels.append(f\"#{tracker_id} {int(speed)}km/h\")\n",
+        "\n",
+        "      # Annotating the frame\n",
+        "\n",
+        "      annotated_frame = frame.copy()\n",
+        "\n",
+        "      # # Drawing the polygon onto the frame\n",
+        "      # annotated_frame = sv.draw_polygon(scene=annotated_frame, polygon=SOURCE, color=sv.Color.RED)\n",
+        "\n",
+        "      annotated_frame = trace_annotator.annotate(scene=annotated_frame, detections=detections)\n",
+        "\n",
+        "      annotated_frame = bounding_box_annotator.annotate(scene=annotated_frame, detections=detections)\n",
+        "      annotated_frame = label_annotator.annotate(scene=annotated_frame, detections=detections, labels=labels)\n",
+        "\n",
+        "      # Writing the annotated frame to the target video\n",
+        "      sink.write_frame(annotated_frame)\n"
       ],
       "metadata": {
         "collapsed": true,
