--- a/Dwell_Time_Analysis_with_Computer_Vision_Real_Time_Stream_Processing.ipynb
+++ b/Dwell_Time_Analysis_with_Computer_Vision_Real_Time_Stream_Processing.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "gpuType": "T4",
-      "authorship_tag": "ABX9TyOmVZ48/UxsloQljtY41Hyz",
+      "authorship_tag": "ABX9TyOZuqDhxvCd/KhQIhQJD6vu",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -30,35 +30,29 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": null,
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
         "id": "g1Td4PwTfVI-",
-        "outputId": "3be6ddcf-63d8-4962-aadf-dc60d2841823"
+        "collapsed": true
       },
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "\u001b[?25l   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m0.0/57.6 kB\u001b[0m \u001b[31m?\u001b[0m eta \u001b[36m-:--:--\u001b[0m\r\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m57.6/57.6 kB\u001b[0m \u001b[31m3.5 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-            "\u001b[?25h"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
-        "!pip install -q pytube"
+        "!pip install -q pytube supervision opencv-python ultralytics inference"
       ]
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "import pytube\n",
+        "import supervision\n",
+        "import cv2\n",
+        "import ultralytics\n",
+        "import inference"
+      ],
       "metadata": {
         "id": "fkgoOGWqg1yt"
       },
-      "execution_count": 3,
+      "execution_count": 9,
       "outputs": []
     },
     {
