Implementing fps based and frame based timers

--- a/Dwell_Time_Analysis_with_Computer_Vision_Real_Time_Stream_Processing.ipynb
+++ b/Dwell_Time_Analysis_with_Computer_Vision_Real_Time_Stream_Processing.ipynb
@@ -5,7 +5,8 @@
     "colab": {
       "provenance": [],
       "gpuType": "T4",
-      "authorship_tag": "ABX9TyOZuqDhxvCd/KhQIhQJD6vu",
+      "mount_file_id": "1gmrURIJMpEMRJk_k8oJdQavwwF4at8TM",
+      "authorship_tag": "ABX9TyMnBusvmpEermPBLYW2OWcd",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -44,13 +45,69 @@
       "cell_type": "code",
       "source": [
         "import pytube\n",
-        "import supervision\n",
+        "import numpy as np\n",
+        "import supervision as sv\n",
         "import cv2\n",
         "import ultralytics\n",
-        "import inference"
+        "import inference\n",
+        "from datetime import datetime"
       ],
       "metadata": {
         "id": "fkgoOGWqg1yt"
+      },
+      "execution_count": 7,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "class FPSBasedTimer:\n",
+        "  def __init__(self, fps):\n",
+        "    self.fps = fps\n",
+        "    self.frame_id = 0\n",
+        "    self.tracker_id2frame_id = {}\n",
+        "\n",
+        "  def tick(self, detections):\n",
+        "    self.frame_id += 1\n",
+        "    times = []\n",
+        "\n",
+        "    for tracker_id in detections.tracker_id:\n",
+        "      self.tracker_id2frame_id.setdefault(tracker_id, self.frame_id)\n",
+        "\n",
+        "      start_frame_id = self.tracker_id2frame_id[tracker_id]\n",
+        "      time_duration = (self.frame_id - start_frame_id)/self.fps\n",
+        "      times.append(time_duration)\n",
+        "\n",
+        "    return np.array(times)"
+      ],
+      "metadata": {
+        "id": "Q8oFNZh4lDd6"
+      },
+      "execution_count": 3,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "class ClockBasedTimer:\n",
+        "  def __init__(self):\n",
+        "    self.tracker_id2start_time = {}\n",
+        "\n",
+        "  def tick(self, detections):\n",
+        "    current_time = datetime.now()\n",
+        "    times = []\n",
+        "\n",
+        "    for tracker_id in detections.tracker_id:\n",
+        "      self.tracker_id2start_time.setdefault(tracker_id, current_time)\n",
+        "\n",
+        "      start_time =  self.tracker_id2start_time[tracker_id]\n",
+        "      time_duration = (current_time - start_time).total_seconds()\n",
+        "      times.append(time_duration)\n",
+        "\n",
+        "    return np.array(times)"
+      ],
+      "metadata": {
+        "id": "PciJjNFChF4v"
       },
       "execution_count": 9,
       "outputs": []
@@ -59,9 +116,9 @@
       "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "PciJjNFChF4v"
+        "id": "_nDE86LhdjHJ"
       },
-      "execution_count": null,
+      "execution_count": 10,
       "outputs": []
     }
   ]
