--- a/Dwell_Time_Analysis_with_Computer_Vision_Real_Time_Stream_Processing.ipynb
+++ b/Dwell_Time_Analysis_with_Computer_Vision_Real_Time_Stream_Processing.ipynb
@@ -6,7 +6,7 @@
       "provenance": [],
       "gpuType": "T4",
       "mount_file_id": "1gmrURIJMpEMRJk_k8oJdQavwwF4at8TM",
-      "authorship_tag": "ABX9TyMnBusvmpEermPBLYW2OWcd",
+      "authorship_tag": "ABX9TyMrXhLhat+rNRlSpTkw/B03",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -49,13 +49,14 @@
         "import supervision as sv\n",
         "import cv2\n",
         "import ultralytics\n",
-        "import inference\n",
-        "from datetime import datetime"
+        "from inference import get_model\n",
+        "from datetime import datetime\n",
+        "from google.colab.patches import cv2_imshow"
       ],
       "metadata": {
         "id": "fkgoOGWqg1yt"
       },
-      "execution_count": 7,
+      "execution_count": 17,
       "outputs": []
     },
     {
@@ -114,11 +115,75 @@
     },
     {
       "cell_type": "code",
+      "source": [
+        "model = get_model(model_id=\"yolov8x-640\")"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "_nDE86LhdjHJ",
+        "outputId": "0c43fd5c-ff02-4543-d49b-9d896e1c7fd2"
+      },
+      "execution_count": 13,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "UserWarning: Specified provider 'CUDAExecutionProvider' is not in available provider names.Available providers: 'AzureExecutionProvider, CPUExecutionProvider'\n",
+            "UserWarning: Specified provider 'OpenVINOExecutionProvider' is not in available provider names.Available providers: 'AzureExecutionProvider, CPUExecutionProvider'\n",
+            "UserWarning: Specified provider 'CoreMLExecutionProvider' is not in available provider names.Available providers: 'AzureExecutionProvider, CPUExecutionProvider'\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "CONFIDENCE_THRESHOLD = 0.5\n",
+        "IOU_THRESHOLD = 0.5\n",
+        "SOURCE_VIDEO_PATH = \"/content/checkout.mp4\"\n",
+        "RESULT_VIDEO_PATH = \"/content/checkout_result.mp4\"\n",
+        "video_info = sv.VideoInfo.from_video_path(SOURCE_VIDEO_PATH)\n",
+        "\n",
+        "BOUNDING_BOX_ANNOTATOR = sv.BoxAnnotator()"
+      ],
+      "metadata": {
+        "id": "nsdMQO3qfSqd"
+      },
+      "execution_count": 20,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "frame_generator = sv.get_video_frames_generator(source_path=SOURCE_VIDEO_PATH)\n",
+        "with sv.VideoSink(target_path=RESULT_VIDEO_PATH, video_info=video_info) as sink:\n",
+        "  for frame in frame_generator:\n",
+        "    results = model.infer(frame, confidence=CONFIDENCE_THRESHOLD, iou=IOU_THRESHOLD)[0]\n",
+        "    detections = sv.Detections.from_inference(results)\n",
+        "\n",
+        "    annotated_frame = frame.copy()\n",
+        "    annotated_frame = BOUNDING_BOX_ANNOTATOR.annotate(scene = annotated_frame, detections = detections)\n",
+        "\n",
+        "    sink.write_frame(annotated_frame)\n",
+        "# cv2_imshow(annotated_frame)\n",
+        "# cv2_destroyAllWindows()"
+      ],
+      "metadata": {
+        "id": "vIo1ivwfk7tZ"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "_nDE86LhdjHJ"
+        "id": "Uz8aj0lCoaUI"
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": []
     }
   ]
